--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,3 +1,5 @@
 spring.application.name=customer-service
 server.port=8082
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+management.endpoints.web.exposure.include=refresh
